# tick

./: .buildinfo  .directory  .gitignore  .gitmodules  .travis.yml  .travis_install_linux.sh  .travis_install_mac.sh  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CPPLINT.cfg  Doxyfile  INSTALL.md  ISSUES.md  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  build_test.sh  build_website.sh  check_versions.py  clean_build_test.sh  decisions_smp.py  full_clean.sh  genindex.html  index.html  lgtm.yml  mkn.sh  mkn.yaml  objects.inv  online_forest.py  online_forest_agathe.py  online_forest_bokeh_serve.py  online_forest_data.py  online_forest_datasets.py  online_forest_decision.py  online_forest_faster.py  online_forest_iterations.py  online_forest_path.py  online_forest_selection.py  (+11 more)
lib/: .clang-format  CMakeLists.txt  CPPLINT.cfg  Doxyfile  mkn.yaml  setup.py.old
lib/cmake/modules/: FindMKL.cmake
lib/cpp-test/array/: CMakeLists.txt  array_gtest.cpp  atomic_array_gtest.cpp  common.h  linear_system_gtest.cpp  major_gtest.cpp  serializer_gtest.cpp  varray_gtest.cpp
lib/cpp-test/base/: CMakeLists.txt  time_func_gtest.cpp  utils_gtest.cpp
lib/cpp-test/benchmark/: CMakeLists.txt  hawkes_leastsq_weights.cpp  logistic_regression_loss.cpp  matrix_vector_dotproduct.cpp
lib/cpp-test/export/: runtime.cpp
lib/cpp-test/hawkes/: CMakeLists.txt
lib/cpp-test/linear_model/: CMakeLists.txt  models_gtest.cpp
lib/cpp-test/serialization/: CMakeLists.txt  include.h  solver.cpp
lib/cpp-test/simd/: basic_simd.c  more_simd.cpp
lib/cpp-test/solver/: CMakeLists.txt  asaga_random_order_gtest_sparse.cpp  saga_gtest.cpp  saga_random_order_gtest_dense.cpp  saga_random_order_gtest_sparse.cpp  sdca_gtest.cpp  sgd_gtest.cpp  svrg_gtest.cpp  toy_dataset.ipp
lib/cpp/array/: CMakeLists.txt  abstract.cpp  alloc.cpp  dot.cpp  template.cpp
lib/cpp/array_test/: array_test.cpp  performance_test.cpp  sbasearray_container.cpp  typemap_test.cpp  varraycontainer.cpp
lib/cpp/base/: exceptions_test.cpp  interruption.cpp  time_func.cpp
lib/cpp/base_model/: CMakeLists.txt  model_generalized_linear.cpp  model_labels_features.cpp  model_lipschitz.cpp
lib/cpp/hawkes/: CMakeLists.txt
lib/cpp/linear_model/: CMakeLists.txt  linreg.cpp  logreg.cpp  model_hinge.cpp  model_linreg.cpp  model_logreg.cpp  model_poisreg.cpp  model_quadratic_hinge.cpp  model_smoothed_hinge.cpp  poisreg.cpp
lib/cpp/online/: CMakeLists.txt  online_forest_classifier.cpp  online_forest_regressor.cpp
lib/cpp/preprocessing/: longitudinal_features_lagger.cpp  longitudinal_features_lagger_mp.cpp  longitudinal_preprocessor.cpp  sparse_longitudinal_features_product.cpp
lib/cpp/prox/: CMakeLists.txt  prox.cpp  prox_binarsity.cpp  prox_elasticnet.cpp  prox_equality.cpp  prox_group_l1.cpp  prox_l1.cpp  prox_l1w.cpp  prox_l2.cpp  prox_l2sq.cpp  prox_multi.cpp  prox_positive.cpp  (+6 more)
lib/doc/: mainpage.dox
tick/: CMakeLists.txt  __init__.py
tick/array/: __init__.py  serialize.py
tick/base/: __init__.py  base.py  decorators.py  dtype_to_cpp_type.py  inference.py  opsys.py  threadpool.py  timefunc.py
tick/base_model/: __init__.py  model.py  model_first_order.py  model_generalized_linear.py  model_labels_features.py  model_lipschitz.py  model_second_order.py  model_self_concordant.py
tick/benchmark/: CMakeLists.txt  linreg_perf.cpp
tick/benchmarks/: hawkes_least_sq.py  logistic_regression.py  poisson_regression.py
tick/dataset/: .gitignore  __init__.py  download_helper.py  fetch_hawkes_data.py  fetch_url_dataset.py  tick_vs_scikit.py  tick_vs_scikit_product.py  timeout_pool.py  url_dataset.py
tick/hawkes/: __init__.py
tick/inference/: __init__.py  cox_regression.py  hawkes_adm4.py  hawkes_basis_kernels.py  hawkes_conditional_law.py  hawkes_dual.py  hawkes_em.py  hawkes_expkern_fixeddecay.py  hawkes_sumexpkern_fixeddecay.py  hawkes_sumgaussians.py  linear_regression.py  logistic_regression.py  online_forest.py  online_forest_classifier.py  online_forest_regressor.py  poisson_regression.py  robust_linear_regression.py  self_control_case_series.py  survival.py
tick/linear_model/: __init__.py  binom.py  linear_regression.py  linreg.py  logistic_regression.py  logreg.py  model_hinge.py  model_linreg.py  model_logreg.py  model_poisreg.py  model_quadratic_hinge.py  model_smoothed_hinge.py  poisreg.py  poisson_regression.py  quadratic_hinge.py  simu_linreg.py  simu_logreg.py  simu_poisreg.py  smoothed_hinge.py
tick/metrics/: __init__.py  metrics.py
tick/online/: __init__.py  online_dummy_classifier.py  online_forest_classifier.py  online_forest_regressor.py
tick/optim/: __init__.py
tick/plot/: __init__.py  plot_hawkes.py  plot_history.py  plot_point_process.py  plot_point_processes.py  plot_sccs.py  plot_stem.py  plot_timefunction.py  plot_utilities.py
tick/preprocessing/: __init__.py  features_binarizer.py  longitudinal_features_lagger.py  longitudinal_features_product.py  longitudinal_samples_filter.py  utils.py
tick/prox/: __init__.py  prox_binarsity.py  prox_elasticnet.py  prox_equality.py  prox_group_l1.py  prox_l1.py  prox_l1w.py  prox_l2.py  prox_l2sq.py  prox_multi.py  prox_nuclear.py  prox_oscar.py  prox_positive.py  prox_slope.py  prox_tv.py  prox_zero.py
tick/random/: __init__.py
tick/robust/: __init__.py  absolute_regression.py  model_absolute_regression.py  model_epsilon_insensitive.py  model_huber.py  model_linreg_with_intercepts.py  model_modified_huber.py  modified_huber.py  robust.py  robust_linear_regression.py
tick/simulation/: __init__.py  coxreg.py  features.py  hawkes.py  hawkes_exp_kernels.py  hawkes_multi.py  hawkes_sumexp_kernels.py  inhomogeneous_poisson.py  linreg.py  logreg.py  poisreg.py  poisson_process.py  sccs.py  weights.py
tick/solver/: __init__.py  adagrad.py  agd.py  bfgs.py  gd.py  gfb.py  newton.py  saga.py  scpg.py  sdca.py  sgd.py  svrg.py
tick/survival/: __init__.py  convolutional_sccs.py  cox_regression.py  coxreg_partial_lik.py  model_coxreg_partial_lik.py  model_sccs.py  sccs.py  simu_coxreg.py  simu_sccs.py  survival.py
tick/tick_cpp/: .gitignore  __init__.py
(+2847 files in other folders)
