set(TICK_PROX_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/tick/prox)

add_library(tick_prox EXCLUDE_FROM_ALL
        prox.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox.h
        prox_separable.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_separable.h
        prox_l2sq.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_l2sq.h
        prox_l2.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_l2.h
        prox_l1.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_l1.h
        prox_l1w.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_l1w.h
        prox_positive.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_positive.h
        prox_zero.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_zero.h
        prox_sorted_l1.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_sorted_l1.h
        prox_slope.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_slope.h
        prox_tv.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_tv.h
        prox_l1w.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_l1w.h
        prox_elasticnet.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_elasticnet.h
        prox_multi.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_multi.h
        prox_equality.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_equality.h
        prox_with_groups.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_with_groups.h
        prox_binarsity.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_binarsity.h
        prox_group_l1.cpp 
        ${TICK_PROX_INCLUDE_DIR}/prox_group_l1.h)
